@@ -1,3 +1,10 @@
+2016-10-21  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-550
+
+	* src/m_atmosphere.cc (AtmFieldsExtract1D): New WSM. More or less
+	the reverse of AtmFieldsExpand1D.
+
 2016-10-14 Jana Mendrok  <jana.mendrok@chalmers.se>
 
 	* arts-2-3-549
